updated to version 1.0.34
